# RaySystem

./: .gitmodules  README.md  RaySystemConfig.example.yaml  hello.py  main.py  pyproject.toml  repo.sh  todo.md
raysystem/: .gitignore  README.md  RaySystemConfig.example.yaml  alembic.ini  main.py  make_migration.sh  open_config.sh  pyproject.toml  run_migrate.sh  run_tests.sh
raysystem/docs/: module_structure_guide.md  ray_scheduler_usage.md
raysystem/migrations/: env.py  script.py.mako
raysystem/migrations/versions/: 09a7180cb8b5_info_add_storage_html.py  1d2096bbfdff_raysystem_migration.py  4918d64178d6_raysystem_migration.py  4ff507e26b13_people_people_add_more_names.py  711ec8f2a63c_raysystem_migration.py  760764980ad9_raysystem_migration.py  a0e5b18ff5c9_raysystem_migration.py  ce3a41c917b1_raysystem_migration.py  e3a6362f26d7_raysystem_migration.py  e667c1aea8f1_site_rename_url_to_host.py  fc0446d32712_site_info_unique_for_host_and_url.py
raysystem/module/base/: constants.py
raysystem/module/browser/: browser.py
raysystem/module/db/: db.py
raysystem/module/early_sleeping/: early_sleeping.py
raysystem/module/http/: http.py
raysystem/module/info/: api.py  info.py  model.py  schemas.py  utils.py
raysystem/module/llm/: __init__.py  api.py  chat_session.py  llm.py  middleware.py  model.py  schemas.py
raysystem/module/note/: __init__.py  api.py  events.py  model.py  note.py  schema.py
raysystem/module/ocr/: api.py  ocr.py
raysystem/module/people/: api.py  core.py  model.py  people.py  schemas.py
raysystem/module/repl/: repl.py
raysystem/raysystem.egg-info/: requires.txt
raysystem/tests/: conftest.py
raysystem/utils/: file.py  logger.py
(+365 files in other folders)
