[project]
name = "raysystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "greenlet>=3.1.1",
    "peewee>=3.17.8",
    "playwright>=1.49.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
