[project]
name = "raysystem"
version = "0.1.0"
description = "A Python system monitoring and management tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "croniter>=6.0.0",
    "duckduckgo-search>=7.4.2",
    "fastapi>=0.115.6",
    "feedparser>=6.0.11",
    "greenlet>=3.1.1",
    "markdownify>=0.14.1",
    "ocrmac>=1.0.0",
    "pagesnap>=0.0.2",
    "playwright>=1.49.1",
    "psutil>=5.9.8",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[tool.setuptools]
packages = ["module", "migrations"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
